--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
-.meme-generator{
+.meme-generator {
     font-family: "Roboto", sans-serif;
     text-align: center;
 }
-.meme-generator img{
+
+.meme-generator img {
     height: 430px;
     object-fit: cover;
 }
-.meme-generator .generate-meme-btn{
+
+.meme-generator .generate-meme-btn {
     padding: 8px 20px;
     border: none;
     border-left: 4px solid #222;
@@ -18,12 +20,16 @@
     cursor: pointer;
     transition: all 400ms ease;
 }
-.meme-generator .generate-meme-btn:hover{
+
+.meme-generator .generate-meme-btn:hover {
     padding: 8px 36px;
     border-left: 8px solid #222;
     border-right: 8px solid #222;
     letter-spacing: 3px;
 }
-.meme-generator .meme-author{
+
+.meme-generator .meme-author {
     margin: 8px;
 }
+
+/* Add your additional CSS styles below */
